--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
     "dev": "tsc -w --noEmit"
   },
   "dependencies": {
+    "@fastify/cors": "^7.0.0",
+    "@prisma/client": "3.14.0",
     "@types/node-fetch": "2",
     "fastify": "^3.29.0",
+    "firebase": "^9.8.1",
+    "nanoid": "^3.3.4",
     "node-fetch": "2",
+    "prisma": "^3.14.0",
     "tsm": "^2.2.1",
     "typescript": "^4.6.4"
   }
