--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "scripts": {
-    "start": "node -r tsm --enable-source-maps index.ts",
+    "start": "node -r tsm --enable-source-maps server.ts",
     "dev": "tsc -w --noEmit"
   },
   "dependencies": {
     "@fastify/cors": "^7.0.0",
     "@prisma/client": "3.14.0",
     "@types/node-fetch": "2",
+    "dayjs": "^1.11.2",
     "fastify": "^3.29.0",
     "firebase": "^9.8.1",
+    "firebase-admin": "^10.2.0",
     "nanoid": "^3.3.4",
     "node-fetch": "2",
     "prisma": "^3.14.0",
